# phlow

./: .dockerignore  .env  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  Cargo.toml  Cargo.toml.test  Dockerfile  ISSUES.md  LICENSE  MIGRATION_SERDE.md  Makefile.toml  PHLOW_MODULE_DEVELOPMENT_GUIDE.md  PHLOW_MODULE_GUIDE.md  README.md  SPREAD_SYNTAX.md  ai.phlow  api.yaml  asdas.yaml  body.yaml  build.sh  config.alloy  consumer.json  consumer.yaml  das.json  docker-compose.yaml  example.json  example.phlow  index.html  inner.phlow  jsj.json  main.json  main.yaml  modules.yaml  musl-dynamic.json  non.phs  open.json  opentelemetry.md  (+28 more)
.github/workflows/: asd.yaml  build-packages.yml  canary.yaml  dev.yaml  docs.yaml  inspect-binarys.yaml  nightly.yaml  pages.yaml  publish-cargo.yaml  publish-crates.yaml  release.yaml  stable-binarys.yaml  stable-docker.yaml  stable.yaml
.tmp/log/: metadata.json
.tmp/phlow/: metadata.json
anyflow/: Cargo.toml  README.md
anyflow-server/: Cargo.toml
anyflow-server/src/: anymain.rs  main.rs
anyflow/src/: anyflow.rs  collector.rs  condition.rs  context.rs  engine.rs  lib.rs  plugins.rs  (+4 more)
blog/: atom.xml  index.html  rss.xml
docker/: Dockerfile  Dockerfile copy  Dockerfile.cross  Dockerfile.cross.gnu  Dockerfile.enviroment  Dockerfile.multi  Dockerfile.musl  modules-build.sh
docs/: asd.md  docusaurus.config.ts  environment.md  opentelemetry.md
examples/: README.md  main.json  main.toml  main.yaml
inputs/http/: Cargo.toml
markdown-page/: index.html
modules/amqp/: Cargo.toml  README.md  phlow.yaml  props.yaml
modules/amqp/src/: consumer.rs  lib.rs  produce.rs  setup.rs
modules/aws/: Cargo.toml  README.md  phlow.yaml
modules/aws/src/: input.rs  lib.rs  setup.rs
modules/aws/src/handlers/: mod.rs  s3_handler.rs  sqs_handler.rs
modules/cache/: Cargo.toml  README.md  TEST_DOCUMENTATION.md  phlow.yaml
modules/cache/src/: config.rs  input.rs  lib.rs  stats.rs
modules/fs/: Cargo.toml  phlow.yaml
modules/fs/src/: input.rs  lib.rs
modules/http_request/: Cargo.toml  README.md  phlow.yaml
modules/http_request/src/: config.rs  input.rs  lib.rs  request.rs
modules/http_rest_api/: Cargo.toml  phlow.yaml  props.yaml
modules/http_rest_api/src/: middleware.rs  resolver.rs  response.rs
modules/http_server/: Cargo.toml  README.md  phlow.yaml
modules/http_server/examples/: CORS_CONFIGURATION.md
modules/http_server/examples/api-cors/: api-cors.phlow
modules/http_server/examples/api-no-cors/: api-no-cors.phlow
modules/http_server/src/: lib.rs  middleware.rs  openapi.rs  openapi_tests.rs  resolver.rs  response.rs  router.rs  settings.rs  setup.rs
modules/jwt/: Cargo.toml  README.md  auth-api.phlow  example.phlow  phlow.yaml
modules/jwt/src/: config.rs  input.rs  jwt_handler.rs  lib.rs
modules/openai/: Cargo.toml  phlow.yaml
modules/openai/src/: config.rs  input.rs  lib.rs  setup.rs
modules/postgres/: Cargo.toml  README.md  phlow.yaml
modules/postgres/src/: input.rs  lib.rs  postgres.rs  response.rs
modules/restapi/: Cargo.toml  props.yaml
modules/restapi/src/: lib.rs  middleware.rs  resolver.rs  response.rs  setup.rs  trace.rs
modules/rpc/: Cargo.toml  README.md  phlow.yaml
modules/rpc/src/: client.rs  lib.rs  server.rs  service.rs  setup.rs
modules/tarrpc/: Cargo.toml  phlow.yaml
modules/tarrpc/src/: client.rs  lib.rs  server.rs  service.rs  setup.rs
nflow/: Cargo.toml  README.md
phlop/: Cargo.toml
phlop/src/: lib.rs  loader.rs
phlow/: Cargo.toml
phlow-cli-inspect/: Cargo.toml
phlow-cli-inspect/src/: main.rs
phlow-docs/: docusaurus.config.ts  package-lock.json  package.json
phlow-engine/: Cargo.toml  README.md
phlow-engine/src/: collector.rs  condition.rs  context.rs  debug.rs  engine.rs  id.rs  lib.rs  modules.rs  phlow.rs  pipeline.rs  repositories.rs  script.rs  step_worker.rs  transform.rs  variable.rs
phlow-publish/: Cargo.toml
phlow-rule-engine/: Cargo.toml  README.md
phlow-runtime/: Cargo.toml
phlow-runtime/src/: analyzer.rs  cli.rs  debug_server.rs  inline_module.rs  lib.rs  loader.rs  log.rs  main.rs  memory.rs  opentelemetry.rs  package.rs  phlowmain.rs  preprocessor.rs  processes.rs  publish.rs  publish.v2.rs  runtime.rs  runtime_api.rs  scripts.rs  settings.rs  test_runner.rs  wrapper_module.rs  yaml.rs
phlow-runtime/src/loader/: error.rs  loader.rs  mod.rs
phlow-runtime/src/module_manager/: mod.rs
phlow-runtime/src/settings/: cli.rs  envs.rs  mod.rs
phlow-runtime/tests/: runtime_preprocess.rs
phlow-sdk/: Cargo.toml
phlow-sdk/src/: context.rs  ext.rs  id.rs  lib.rs  macros.rs  modules.rs  otel.rs  prelude.rs  timer.rs
phlow-sdk/src/structs/: mod.rs  modules.rs
phlow-server/: Cargo.toml
phlow/src/: collector.rs  envs.rs  lib.rs  loader.rs  main.rs  memory.rs  otlp.rs  phlow.rs  processes.rs  script.rs  settings.rs  transform.rs  yaml.rs
phlows/: authorization.phlow
phs/: Cargo.toml  README.md
phs/src/: functions.rs  lib.rs  preprocessor.rs  repositories.rs  script.rs  variable.rs
plugins/anyflow-http/: Cargo.toml
plugins/anyflow-http/src/: lib.rs  lib2.rs  setup.rs
scripts/: build-packages.sh  install-phlow.sh  local-packages.sh  modules-build-musl.sh  modules-build.sh  move-modules-musl.sh  move-modules.sh  package.sh  packages.sh  publish.sh  resolver-packages-dir.sh  uninstall-phlow.sh
sdk/: Cargo.toml  opentelemetry.rs
sdk/src/: context.rs  count.rs  id.rs  lib.rs  modules.rs  opentelemetry.rs  otel.rs  otlp.rs
site/: MODULES_TRANSLATION_COMPLETE.md  RESPONSIVE_IMPLEMENTATION.md  TRANSLATION_SUMMARY.md  docusaurus.config.ts  package-lock.json  package.json  translate_modules.sh  webhook-deployment-fixed.yaml
test_otlp/: Cargo.toml
test_otlp/src/: main.rs
tests/: auth.phlow  complex_test.phlow  conditional_test.phlow  continuation_test.phlow  data.json  debug_test.phlow  fix_return.phlow  import.phlow  inner.phlow  load_test.bash  nested_describe_test.phlow  simple_test.phlow  test.phlow  test_new.phlow
tracer/: Cargo.toml
v8/: Cargo.toml
vscode-phlow/: README.md  extension.js  package-lock.json  package.json
(+502 files in other folders)
