[workspace]
members = [
    "phlow-engine",
    "phlow-runtime",
    "phlow-sdk",
    "phs",
    "modules/http_server",
    "modules/echo",
    "modules/amqp",
    "modules/log",
    "modules/sleep",
    "modules/http_request",
    "modules/postgres",
    "modules/cli",
]
resolver = "2"

[workspace.package]
version = "0.0.12"
edition = "2021"
rust-version = "1.83.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
license = "MIT"
repository = "https://github.com/lowcarboncode/phlow"

[workspace.dependencies]
# internal
phlow-engine = { path = "phlow-engine", version = "0.0.12" }
phlow-sdk = { path = "phlow-sdk", version = "0.0.12" }
phs = { path = "phs", version = "0.0.12" }

#phlow
libloading = "0.8"
clap = "4.5.37"
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
regex = "1.11.1"
futures = "0.3"
mimalloc = { version = "0.1.46", features = ["secure"] }
libc = "0.2.172"
valu3 = "0.8"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
reqwest = { version = "0.12.15", features = ["blocking"] }

futures-util = "0.3.31"
anyhow = "1.0.98"
flate2 = "1.1.1"
tar = "0.4.44"
chrono = { version = "0.4", features = ["serde"] }

#Engine
rhai = { version = "1.21.0", features = ["serde", "sync"] }

# OpenTelemetry
opentelemetry = "0.29.1"
opentelemetry_sdk = "=0.29.0"
opentelemetry-prometheus = "0.29.1"
tracing-opentelemetry = "=0.30.0"
opentelemetry-stdout = "=0.29.0"
opentelemetry-semantic-conventions = { version = "=0.29.0", features = [
    "semconv_experimental",
] }
tracing-core = "=0.1.33"
opentelemetry-otlp = { version = "=0.29.0", features = ["grpc-tonic"] }
tracing-subscriber = "=0.3.19"
tracing = "=0.1.41"
