[workspace]
members = [
    "phlow-engine",
    "phlow-runtime",
    "phlow-sdk",
    "phs",
    "modules/http_server",
    "modules/echo",
    "modules/amqp",
    "modules/log",
    "modules/sleep",
    "modules/http_request",
    "modules/postgres",
    "modules/cli",
    "modules/rpc",
]
resolver = "2"

[workspace.package]
version = "0.0.35"
edition = "2021"
rust-version = "1.87.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
license = "MIT"
repository = "https://github.com/phlowdotdev/phlow"

[workspace.dependencies]
# internal
phlow-engine = { path = "phlow-engine", version = "0" }
phlow-sdk = { path = "phlow-sdk", version = "0" }
phs = { path = "phs", version = "0" }

#phlow
libloading = "0.8.8"
clap = "4.5.41"
serde_yaml = "0.9.34"
regex = "1.11.1"
futures = "0.3"
libc = "0.2.174"
valu3 = "0.8"
tokio = { version = "1.46.1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
futures-util = "0.3.31"
anyhow = "1.0.98"
flate2 = "1.1.2"
tar = "0.4.44"
chrono = { version = "0.4.41", features = ["serde"] }

#Engine
rhai = { version = "1.22.2", features = ["serde", "sync"] }

# OpenTelemetry
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-semantic-conventions = { version = "0.30.0", features = [
    "semconv_experimental",
] }
tracing-core = "0.1.34"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-subscriber = "=0.3.19"
tracing = "=0.1.41"
once_cell = "1.21.3"
