[workspace]
members = [
    "phlow-engine",
    "phlow-cli-inspect",
    "phlow-runtime",
    "phlow-sdk",
    "phs",
    "examples/runtime-embed",
    "modules/http_server",
    "modules/echo",
    "modules/amqp",
    "modules/log",
    "modules/sleep",
    "modules/http_request",
    "modules/postgres",
    "modules/cli",
    "modules/rpc",
    "modules/jwt",
    "modules/openai",
    "modules/cache",
    "modules/aws",
    "modules/fs",
]
resolver = "2"
[workspace.package]
version = "0.4.2"
edition = "2024"
rust-version = "1.90.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
license = "MIT"
repository = "https://github.com/phlowdotdev/phlow"

[workspace.dependencies]
# internal
phlow-engine = { path = "phlow-engine", version = "0" }
phlow-sdk = { path = "phlow-sdk", version = "0" }
phs = { path = "phs", version = "0" }
phlow-runtime = { path = "phlow-runtime", version = "0" }

#phlow
libloading = "0.9.0"
clap = "4.5.53"
serde_yaml = "0.9.34"
regex = "1.12.2"
futures = "0.3"
libc = "0.2.177"
valu3 = "0.9.6"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
crossbeam = "0.8"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
anyhow = "1.0.100"
flate2 = "1.1.5"
tar = "0.4.44"
chrono = { version = "0.4.42", features = ["serde"] }

#Engine
rhai = { version = "1.23.6", features = ["serde", "sync"] }

# OpenTelemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
opentelemetry-stdout = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
tracing-core = "0.1.34"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-subscriber = "0.3.20"
tracing = "=0.1.43"
once_cell = "1.21.3"
tracing-log = "0.2.0"

log = { version = "0.4.29" }
env_logger = { version = "0.11" }

[profile.release]
# Foco em velocidade de build (ajusta desempenho de runtime marginalmente)
codegen-units = 16
lto = "off"
debug = false
strip = "symbols"
