[package]
name = "phlop"
description = "Phlow package manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
phlow-sdk = { workspace = true }
toml = { workspace = true }
