[package]
name = "phlow-tui-inspect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI inspector for Phlow debug TCP server."
publish = false

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = { workspace = true }
