[package]
name = "phlow-engine"
edition = "2021"
version = "0.0.1"
description = "Engine for Phlow, a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
license = "MIT"
repository = "https://github.com/lowcarboncode/phlow"
keywords = [
    "phlow",
    "runtime",
    "workflow",
    "opentelemetry",
    "observability",
    "yaml",
]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/lowcarboncode/phlow"
documentation = "https://docs.rs/phlow"

[dependencies]
serde = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
valu3 = { workspace = true }
tokio = { workspace = true }
phlow-sdk = { workspace = true }
crossbeam = { workspace = true }
