[package]
name = "phlow-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Engine for Phlow, a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
keywords = ["phlow", "engine", "lib"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/phlowdotdev/phlow"
documentation = "https://docs.rs/phlow"


[dependencies]
serde = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
phlow-sdk = { workspace = true }
once_cell = "1.21.3"
phs = { workspace = true }
