[package]
name = "phlow-runtime"
version = "0.0.1"
edition = "2021"
description = "Phlow is a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
license = "MIT"
repository = "https://github.com/lowcarboncode/phlow"
keywords = ["phlow", "phlow-runtime", "workflow", "cli", "automation"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/lowcarboncode/phlow"
documentation = "https://docs.rs/phlow"
publish = true

[dependencies]
phlow-sdk = { workspace = true }
phlow-engine = { workspace = true }
serde = { workspace = true }
libloading = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "phlow"
path = "src/main.rs"
