[package]
name = "phlow-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Phlow is a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
keywords = ["phlow", "phlow-runtime", "workflow", "cli", "automation"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/lowcarboncode/phlow"
documentation = "https://docs.rs/phlow"
publish = true

[dependencies]
phlow-sdk = { workspace = true }
phlow-engine = { workspace = true }
serde = { workspace = true }
libloading = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
git2 = { version = "0.20.1" }
zip = { version = "2.6.1" }
openssl = { version = "0.10.72", features = ["vendored"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
phs = { workspace = true }

# Optional allocators
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5.4", optional = true }

[features]
default = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]


[[bin]]
name = "phlow"
path = "src/main.rs"
