[package]
name = "phlow-sdk"
edition = "2021"
version = "0.0.1"
description = "SDK for Phlow, a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
license = "MIT"
repository = "https://github.com/lowcarboncode/phlow"
keywords = [
    "phlow",
    "runtime",
    "workflow",
    "opentelemetry",
    "observability",
    "yaml",
]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/lowcarboncode/phlow"
documentation = "https://docs.rs/phlow"

[dependencies]
valu3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-core = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
