[package]
name = "phlow-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for Phlow, a fast, modular runtime for building backends with YAML flows, Rust modules, and native OpenTelemetry observability."
keywords = ["phlow", "sdk"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/lowcarboncode/phlow"
documentation = "https://docs.rs/phlow"

[dependencies]
valu3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing-core = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
