[package]
name = "phlow"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
phlow-engine = { path = "../phlow-engine" }
serde = { version = "1.0", features = ["derive"] }
libloading = "0.8"
clap = "4"
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
regex = "1.11.1"
crossbeam = "0.8"
futures = "0.3"
mimalloc = { version = "0.1", features = ["secure"] }