[package]
name = "phlow"
edition = "2021"

[dependencies]
sdk = { workspace = true }
phlow-engine = { workspace = true }
serde = { workspace = true }
libloading = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
libc = { workspace = true }
