[package]
name = "phs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
valu3 = { workspace = true }
