[package]
name = "phs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime for Phlow Script, PHS"
keywords = ["phlow", "phs"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/phlowdotdev/phlow"
documentation = "https://docs.rs/phlow"

[dependencies]
serde = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
valu3 = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
