[package]
name = "phs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime for Phlow Script, PHS"
keywords = ["phlow", "phs"]
categories = ["development-tools"]
readme = "../README.md"
homepage = "https://github.com/phlowdotdev/phlow"
documentation = "https://docs.rs/phlow"

[dependencies]
serde = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
valu3 = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
uuid = { version = "1.18.1", features = ["v4", "v3", "v5", "v6", "v7"] }

[lib]
doctest = false
