[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
valu3 = "0.8"
tokio = { version = "1.44", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"


# OpenTelemetry
opentelemetry = "0.29.1"
opentelemetry_sdk = "=0.29.0"
opentelemetry-prometheus = "=0.29.0"
tracing-opentelemetry = "=0.30.0"
opentelemetry-stdout = "=0.29.0"
opentelemetry-semantic-conventions = { version = "=0.29.0", features = [
    "semconv_experimental",
] }
tracing-core = "=0.1.33"
opentelemetry-otlp = { version = "=0.29.0", features = ["grpc-tonic"] }
tracing-subscriber = "=0.3.19"
tracing = "=0.1.41"
