[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
valu3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-core = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
