[package]
name = "test_otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.29.0"
opentelemetry_sdk = "0.29.0"
opentelemetry-jaeger = "0.22.0" # Exportador de traces para Jaeger
opentelemetry-prometheus = "0.29.0" # Exportador de métricas para Prometheus
tracing-opentelemetry = "0.30.0"
opentelemetry-stdout = "0.29.0"
opentelemetry-semantic-conventions = { version = "0.29.0", features = [
    "semconv_experimental",
] }
tracing-core = "0.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
