[package]
name = "input_http"
version = "0.1.0"
edition = "2021"

[dependencies]
valu3 = { version = "0.8.2", features = ["default", "cstring"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sdk = { path = "../../sdk" }


[lib]
name = "http"
crate-type = ["cdylib"]
