[package]
name = "http_request"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
phlow-sdk = { workspace = true }
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
lazy_static = "1.5.0"
openssl = { version = "0.10.72", features = ["vendored"] }

[lib]
name = "http_request"
crate-type = ["cdylib"]
