[package]
name = "http_server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
phlow-sdk = { version = "0.1.1" }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
futures-util = "0.3.31"
openssl = { version = "0.10.72", features = ["vendored"] }
from-path = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"

[lib]
name = "http_server"
crate-type = ["cdylib"]
