[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
phlow-sdk = { workspace = true }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "jwt"
crate-type = ["cdylib"]
