[package]
name = "jwt"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
phlow-sdk = { workspace = true }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "jwt"
crate-type = ["cdylib"]
doctest = false
