[package]
name = "phlow_openai"
version = "0.1.0"
edition = "2021"
authors = ["Phlow <dev@phlow.local>"]
description = "Módulo Phlow para expor recursos OpenAI (chat, completions, embeddings)"

[lib]
name = "phlow_openai"
crate-type = ["cdylib"]

[dependencies]
phlow-sdk = { workspace = true }
openai_api_rust = "0.1.9"
