[package]
name = "postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phlow-sdk = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = "0.4"

[lib]
name = "postgres"
crate-type = ["staticlib"]
