[package]
name = "postgres"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
phlow-sdk = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = "0.4"
tokio-postgres-rustls = "0.13"
rustls = "0.23"
webpki-roots = "1.0.4"

[lib]
name = "postgres"
crate-type = ["cdylib"]
doctest = false
