[package]
name = "restapi"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../sdk" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
futures-util = "0.3.31"

[lib]
name = "restapi"
crate-type = ["cdylib"]
