[package]
name = "phlow-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
phlow-sdk = { path = "../../phlow-sdk" }
tarpc = { version = "0.34", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
hostname = "0.3"

[lib]
name = "rpc"
crate-type = ["cdylib"]
