[package]
name = "phlow-rpc"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
phlow-sdk = { path = "../../phlow-sdk" }
tarpc = { version = "0.37.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
hostname = "0.4.1"

[lib]
name = "rpc"
crate-type = ["cdylib"]
