[package]
name = "tarrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
phlow-sdk = { workspace = true }
tarpc = { version = "0.36", features = ["serde-transport", "tokio1", "tcp"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
hostname = "0.4.1"

[lib]
crate-type = ["cdylib"]
name = "tarrpc"
