[package]
name = "anyflow-http"
version = "0.1.0"
edition = "2021"

[dependencies]
valu3 = { version = "0.8.2", features = ["default", "cstring"] }
sdk = { path = "../../sdk" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }


[lib]
name = "http"
crate-type = ["cdylib"]
